# account_proto

./: Cargo.toml  README.md  build.rs
proto/: account.proto
src/: account.rs  account_grpc.rs  lib.rs
