[package]
name = "account_proto"
version = "0.3.0-upgrade"
edition = "2021"
build = "build.rs"
[lib]

[dependencies]
tonic = "0.12.3"
prost = { version = "0.13.4", features = ["prost-derive"] }
prost-types = "0.13.4"
[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
[gitflow]
production_branch = "main"
development_branch = "develop"
feature_branch_prefix = "feature/"
hotfix_branch_prefix = "hotfix/"
version_tag_prefix = "v"
origin = "origin"