[package]
name = "account_proto"
version = "0.4.0-SNAPSHOT"
edition = "2021"
build = "build.rs"
[lib]

[dependencies]
tonic = "0.13.1"
prost = { version = "0.13.5", features = ["prost-derive"] }
prost-types = "0.13.5"
[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
[gitflow]
production_branch = "main"
development_branch = "develop"
feature_branch_prefix = "feature/"
hotfix_branch_prefix = "hotfix/"
version_tag_prefix = "v"
origin = "origin"