[package]
name = "account_proto"
version = "0.4.0-SNAPSHOT"
edition = "2021"
build = "build.rs"
[lib]

[dependencies]
tonic = "0.14.1"
prost = { version = "0.14.1" }
tonic-prost={version = "0.14.1"}
prost-types = "0.14.1"
[build-dependencies]
tonic-prost-build = { version = "0.14.1"}
[gitflow]
production_branch = "main"
development_branch = "develop"
feature_branch_prefix = "feature/"
hotfix_branch_prefix = "hotfix/"
version_tag_prefix = "v"
origin = "origin"